modules/libjar/nsZipArchive.h
@@ -54,6 +54,7 @@ public:
   PRUint32    size;
   PRUint32    realsize;
   PRUint32    crc32;
+  PRUint16    mode;
 
   nsZipItem*  next;
 
@@ -178,7 +179,7 @@ private:
   nsZipArchive(const nsZipArchive& rhs);            // prevent copies
 
   PRInt32           BuildFileList();
-  nsZipItem*  GetFileItem( const char * aFilename );
+  nsZipItem*        GetFileItem( const char * aFilename );
   PRUint32          HashName( const char* aName );
 
   PRInt32           ReadInitImpl(const char* aFilename, nsZipItem** aItem);
